Stop propagation and set/unset overflow for body

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,5 @@
 .Header {
+  z-index: 1;
   height: 63px;
   position: fixed;
   top: 0;
